# BentoVision

./: Bento.ipynb  README.md  Test.ipynb  Train.ipynb  Train2.ipynb  requirements.txt
deploy/: Bento.ipynb  Dockerfile  invoke.py  lambda_function.py  publish.sh  pyproject.toml  test.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
